[gd_scene load_steps=2 format=2]

[ext_resource path="res://exercicio2.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button4" type="Button" parent="."]
margin_left = 535.0
margin_top = 16.0
margin_right = 700.0
margin_bottom = 65.0
rect_pivot_offset = Vector2( 704, 95 )
text = "Exercício 4"

[node name="Button3" type="Button" parent="."]
margin_left = 360.0
margin_top = 16.0
margin_right = 525.0
margin_bottom = 65.0
rect_pivot_offset = Vector2( 63, 25 )
text = "Exercício 3"

[node name="Button2" type="Button" parent="."]
margin_left = 185.0
margin_top = 16.0
margin_right = 350.0
margin_bottom = 65.0
rect_pivot_offset = Vector2( 105, 25 )
text = "Exercício 2"

[node name="Button1" type="Button" parent="."]
margin_left = 10.0
margin_top = 16.0
margin_right = 175.0
margin_bottom = 65.0
rect_pivot_offset = Vector2( 105, 25 )
text = "Exercício 1"

[node name="Label" type="Label" parent="."]
margin_left = 13.0
margin_top = 84.0
margin_right = 713.0
margin_bottom = 114.0
text = "Você está no Exercício 2: Crie uma lista vazia, preencha com os dados enviados pelo usuário e mostre na tela"

[node name="ButtonRes" type="Button" parent="."]
margin_left = 32.0
margin_top = 244.0
margin_right = 388.0
margin_bottom = 296.0
text = "MOSTRAR LISTA ATUAL"

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 31.0
margin_top = 189.0
margin_right = 389.0
margin_bottom = 237.0

[node name="LabelRes" type="Label" parent="."]
margin_left = 33.0
margin_top = 313.0
margin_right = 733.0
margin_bottom = 343.0

[node name="aviso" type="Label" parent="."]
margin_left = 33.0
margin_top = 176.0
margin_right = 385.0
margin_bottom = 190.0
rect_scale = Vector2( 0.8, 0.8 )
text = "*aviso: separe os itens da lista com espaço"

[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="ButtonRes" to="." method="_on_ButtonRes_pressed"]
